# SimpleCPP

./: .gitmodules  CMakeLists.txt  README.md  compilationScript  configure.sh
include/: canvas.h  color.h  graphicsim.h  pose.h  simplecpp  sprite.h  text.h
include/simplecpp_include/: circle.h  common_def.h  ellipse.h  eventcodes.h  graphicsim.h  line.h  polygon.h  pose.h  sprite.h  text.h  turtle.h
src/: Makefile  canvas.cpp  circle.cpp  circle.h  cmd  color.cpp  ellipse.cpp  ellipse.h  line.cpp  line.h  main.cpp  plane.cpp  polygon.cpp  polygon.h  rectangle.cpp  sim.cpp  sprite.cpp  text.cpp  turtle.cpp  turtleSim.cpp
tools/darwin/: s++
tools/unix/: s++
